@@ -2,59 +2,57 @@ package com.safalifter.userservice.controller;
 
 import com.safalifter.userservice.dto.AuthUserDto;
 import com.safalifter.userservice.dto.UserDto;
+import com.safalifter.userservice.mappers.UserMapper;
 import com.safalifter.userservice.request.RegisterRequest;
-//import com.safalifter.userservice.request.UserUpdateRequest;
 import com.safalifter.userservice.service.UserService;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-//import org.springframework.web.multipart.MultipartFile;
 
 import javax.validation.Valid;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/user")
 @RequiredArgsConstructor
 public class UserController {
+
     private final UserService userService;
-    private final ModelMapper modelMapper;
+    private final UserMapper userMapper;
 
     @PostMapping("/save")
     public ResponseEntity<UserDto> save(@Valid @RequestBody RegisterRequest request) {
-        return ResponseEntity.ok(modelMapper.map(userService.saveUser(request), UserDto.class));
+        return new ResponseEntity<>(userMapper.mapToUserDTO(userService.saveUser(request)), HttpStatus.OK);
     }
 
     @GetMapping("/getAll")
     @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<UserDto>> getAll() {
-        return ResponseEntity.ok(userService.getAll().stream()
-                .map(user -> modelMapper.map(user, UserDto.class)).toList());
+        List<UserDto> result = userService.getAll()
+                .stream()
+                .map(userMapper::mapToUserDTO)
+                .collect(Collectors.toList());
+
+        return new ResponseEntity<>(result, HttpStatus.OK);
     }
 
     @GetMapping("/getUserById/{id}")
     public ResponseEntity<UserDto> getUserById(@PathVariable String id) {
-        return ResponseEntity.ok(modelMapper.map(userService.getUserById(id), UserDto.class));
+        return new ResponseEntity<>(userMapper.mapToUserDTO(userService.getUserById(id)), HttpStatus.OK);
     }
 
     @GetMapping("/getUserByEmail/{email}")
     public ResponseEntity<UserDto> getUserByEmail(@PathVariable String email) {
-        return ResponseEntity.ok(modelMapper.map(userService.getUserByEmail(email), UserDto.class));
+        return new ResponseEntity<>(userMapper.mapToUserDTO(userService.getUserByEmail(email)), HttpStatus.OK);
     }
 
     @GetMapping("/getUserByUsername/{username}")
     public ResponseEntity<AuthUserDto> getUserByUsername(@PathVariable String username) {
-        return ResponseEntity.ok(modelMapper.map(userService.getUserByUsername(username), AuthUserDto.class));
+        return new ResponseEntity<>(userMapper.mapToAuthUserDto(userService.getUserByUsername(username)), HttpStatus.OK);
     }
-
-//    @PutMapping("/update")
-//    @PreAuthorize("hasRole('ADMIN') or @userService.getUserById(#request.id).username == principal")
-//    public ResponseEntity<UserDto> updateUserById(@Valid @RequestPart UserUpdateRequest request,
-//                                                  @RequestPart(required = false) MultipartFile file) {
-//        return ResponseEntity.ok(modelMapper.map(userService.updateUserById(request, file), UserDto.class));
-//    }
 
     @DeleteMapping("/deleteUserById/{id}")
     @PreAuthorize("hasRole('ADMIN') or @userService.getUserById(#id).username == principal")
@@ -62,4 +60,5 @@ public class UserController {
         userService.deleteUserById(id);
         return ResponseEntity.ok().build();
     }
+
 }
